# cloudProviderAnalytics

./: .gitignore  main.py  pyproject.toml  readme.md
api/: api.py  models.py
frontend/: app.py
ingest/: ingest.py
marts/: marts.py
serving/: connect_database.py  serving.py
silver/: silver.py
