[project]
name = "cloudprovideranalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astrapy>=2.1.0",
    "cassandra-driver>=3.29.3",
    "fastapi>=0.124.2",
    "pyspark>=4.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
]
